# LittleEngine

./: CMakeLists.txt  LICENSES.md  README.md
include/LittleEngine/: error_logger.h  geometry.h  little_engine.h
include/LittleEngine/Audio/: sound.h
include/LittleEngine/Graphics/: camera.h  lighting.h  render_target.h  renderer.h  shader.h  texture.h
include/LittleEngine/Input/: input.h
include/LittleEngine/Math/: random.h
include/LittleEngine/Platform/: platform.h
include/LittleEngine/Platform/GLFW/: platform_glfw.h
include/LittleEngine/Storage/: storage_helper.h
include/LittleEngine/UI/: ui_context.h  ui_element.h
include/LittleEngine/Utils/: random.h
src/: error_logger.cpp  geometry.cpp  little_engine.cpp
src/Audio/: audio.cpp  sound.cpp
src/Graphics/: camera.cpp  font.cpp  lighting.cpp  render_target.cpp  renderer.cpp  shader.cpp  texture.cpp
src/Input/: input.cpp
src/Math/: geometry.cpp  random.cpp
src/Platform/GLFW/: glfw_utils.cpp  glfw_window.cpp  platform_glfw.cpp
src/Platform/SDL/: sdl_window.cpp
src/Storage/: storage_helper.cpp
src/UI/: ui_context.cpp  ui_element.cpp  ui_system.cpp
src/Utils/: file_system.cpp  random.cpp
